--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,12 @@ main button {
   margin-bottom: 20px;
 }
 
+#snittShow {
+  font-family: sans-serif;
+  font-weight: 900;
+  font-size: 3rem;
+}
+
 .hidden {
   display: none;
 }
